--- a/app/views/layouts/ticket_panel.html.erb
+++ b/app/views/layouts/ticket_panel.html.erb
@@ -3,7 +3,8 @@
 <head>
   <title>Tickets Management</title>
   <%= csrf_meta_tags %>
-
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">
   <%= Gon::Base.render_data %>
   <%= stylesheet_link_tag "/assets/app.css" %>
   <%= javascript_include_tag "/assets/app.js" %>
@@ -11,9 +12,6 @@
 </head>
 
 <body>
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
-<p>--- No art / Only Architeture ---</p>
 <%= yield %>
 <script>require('frontend/js/app').init();</script>
 </body>
